ex3.1 --eliminate tagged classes & refactor