@@ -9,15 +9,15 @@ public class Queue implements Serializable {
 
 	private static final long serialVersionUID = -367534955230149744L;
 	
-	private List<Email> emails = Collections.synchronizedList(new LinkedList<Email>());
+	private final List<Email> emails = Collections.synchronizedList(new LinkedList<Email>());
 	
     public void add(Email email) {
         emails.add(email);
     }
 
     public Email get() {
-        if (emails.size() > 0) {
-            return emails.remove(emails.size() - 1);
+        if (!emails.isEmpty()) {
+            return emails.removeLast();
         } 
         
         return null;
